small css fixes here and there, removed transition in menu for better ux and fixed a bug with the menu on mobile

--- a/src/components/menus/admin-top-nav/style.sass
+++ b/src/components/menus/admin-top-nav/style.sass
@@ -129,9 +129,10 @@
 @media (min-width: 800px)
 	.fa-sign-out-alt
 		margin-left: 2px!important
-	.slide-menu
-		width: 30%!important
-		height: 82vh!important
+	.slide-menu    
+      transition: none!important
+      width: 30%!important
+      height: 82vh!important
 	.menu-item
 		padding: 3.64vh
 	.services__press
@@ -143,3 +144,4 @@
 		font-weight: 600
 		text-align: center
 		padding: 0px!important
+    
