--- a/src/views/employees/fix-desktop-emp.sass
+++ b/src/views/employees/fix-desktop-emp.sass
@@ -1,7 +1,7 @@
 @media (min-width: 800px)
     .fix-employee
         .BasicList__container
-            width: 95%!important
+            width: 100%!important
             margin: 2vh auto 2vh auto!important
         .BasicForm
             margin: 10vh auto!important
